--- a/9.3/Dockerfile
+++ b/9.3/Dockerfile
@@ -38,6 +38,8 @@ RUN apt-get update \
 	&& apt-get install -y \
 		postgresql-$PG_MAJOR=$PG_VERSION \
 		postgresql-contrib-$PG_MAJOR=$PG_VERSION \
+		postgresql-plperl-$PG_MAJOR=$PG_VERSION \
+  		postgresql-plpython-$PG_MAJOR=$PG_VERSION \
 	&& rm -rf /var/lib/apt/lists/*
 
 # make the sample config easier to munge (and "correct by default")
